# hide-rs

./: .env.example  Cargo.toml  README.md
src/: bltm.rs  decoder.rs  encoder.rs  error.rs  img.rs  lib.rs  raw_decoder.rs  utils.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
static/: index.html
tests/: integration_encode.rs
