[package]
name = "hide-rs"
version = "0.1.0"
edition = "2021"
authors = ["Waseem Riaz <waseem.riaz.9999@gmail.com>"]
description = "A steganography library using BLTM for hiding messages in images"
license = "MIT"
repository = "https://github.com/waseemr02/hide-rs"
keywords = ["steganography", "image", "cryptography", "bltm", "security"]
categories = ["cryptography", "multimedia"]

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.31", features = ["derive"] }
image = "0.25.5"
rand = "0.9.0"
thiserror = "2.0.12"
