[package]
name = "hide-rs"
version = "0.1.0"
edition = "2021"
authors = ["Waseem Riaz <waseem.riaz.9999@gmail.com>"]
description = "A steganography library using BLTM for hiding messages in images"
license = "MIT"
repository = "https://github.com/waseemr02/hide-rs"
keywords = ["steganography", "image", "cryptography", "bltm", "security"]
categories = ["cryptography", "multimedia"]

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.97"
base64 = "0.22.1"
bitvec = "1.0.1"
bytes = "1.10.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
config = "0.15.9"
derive_more = { version = "2.0.1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
image = "0.25.5"
log = "0.4.26"
mime = "0.3.17"
mime_guess = "2.0.5"
rand = "0.9.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tempdir = "0.3.7"
tempfile = "3.17.1"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }

[lib]
name = "hide_rs"
path = "src/lib.rs"

[[bin]]
name = "hide"
path = "src/bin/hide.rs"

[[bin]]
name = "hide-server"
path = "src/bin/server.rs"
